pgm-k8s.yml
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: pgm
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgm
  # Pod template
  template:
    metadata:
      labels:
        app: pgm
    spec:
      containers:
        - name: pgmweb
          image: usgsastro/planetarygeologicmappers:latest
          ports: [{ containerPort: 5000 }]
          volumeMounts:
            - name: pgm-secrets
              mountPath: /run/secrets
        - name: pgmdb
          image: mongo:latest
          volumeMounts:
            - name: vol-pgm-db
              mountPath: /data/db
      volumes:
        - name: pgm-secrets
          secret: { secretName: pgm-web-secrets }
        - name: vol-pgm-db
          persistentVolumeClaim: { claimName: pvc-pgm-db }

---

kind: Service
apiVersion: v1
metadata:
  name: pgm
  namespace: development
spec:
  selector:
    app: pgm
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000

---

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: pgm
  namespace: development
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: pgm
spec:
  rules:
    - host: planetarymapping-dev.wr.usgs.gov
      http:
        paths:
          - path: /
            backend:
              serviceName: pgm
              servicePort: http
